# ollama-tasker

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  COWORK_HANDOFF.md  COWORK_PROMPT.md  README.md  TIER_A_DIRECTIVES.md  pyproject.toml
.claude/: settings.json
.claude/commands/: compact-claude-md.md  handoff.md
cli/: shell.py
config/modes/: chat.yaml  code.yaml  cowork.yaml  research.yaml  secure.yaml
config/profiles/: tier0_minimal.yaml  tier1_cloud_planner.yaml  tier1_tasker.yaml  tier2_designlab.yaml  tier2_designlab_cloud.yaml  tier4_cloud_hybrid.yaml
config/workers/: worker_registry.yaml
core/: __init__.py  agent_manager.py  agent_runtime.py  agent_slash_commands.py  bash_security.py  compact.py  hook_policy.py  mcp_runtime.py  microcompact.py  openai_compat.py  plan_runtime.py  query_engine.py  session_store.py  task_runtime.py
docs/: OLLAMA_TASKER_SDD.md  Ollama_AMD_APU_Install_Guide.md  SDD.md  SDD_ADDENDUM_7.5.md  SDD_ADDENDUM_PHASE8.md  TASKER_CHECKLIST.md  TESTING_GUIDE.md  ollama-amd-igpu-config-guide.md
docs/transcripts/: phase_8_4_tui_transcript.txt
scripts/: phase_8_4_transcript.py
tasker/: __init__.py
tasker/api/: server.py
tasker/classifier/: __init__.py  base.py  local_llm.py  rule_based.py
tasker/config/: detect.py  gpu_backends.py
tasker/modes/: __init__.py  base.py  chat.py  code.py  cowork.py  research.py  secure.py
tasker/orchestrator/: __init__.py  _parse.py  base.py  factory.py  tier0_rules.py  tier1_single.py  tier2_dual.py  tier3_reasoning.py  tier4_cloud.py
tasker/runtime/: delegation.py  dispatch.py  (+1 more)
(+96 files in other folders)
