[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-tasker"
version = "0.1.0"
description = "Provider-agnostic, hardware-aware multi-agent orchestration for tool-capable LLMs"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "psutil>=5.9",
    "textual>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "ruff",
]

[project.scripts]
tasker = "tasker.tui.app:main"
tasker-cli = "cli.shell:main"
tasker-hardware = "tasker.config.detect:cli_main"
tasker-setup = "tasker.setup.wizard:cli_main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["tasker*", "core*", "cli*"]

